tests/Unit/PHPStan/Rules/Fixtures/SingleClassPerFile/Invalid/ThreeClasses.php
<?php

declare(strict_types=1);

namespace Fixture\SingleClassPerFile\Invalid;

class ThreeClassesFirst {}

class ThreeClassesSecond {}

class ThreeClassesThird {}
